# WattsUp

./: .gitignore  Challenge.md  DOC.md  README.md  forecast_viewer.html  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
data/preprocessed/: predictions.parquet  train.parquet  upstream_burgau_final.parquet
data/raw/: Zeitreihen_WKA_2025_2026.xlsx  Zeitreihen_Wetterprognosen_2025_2026.xlsx  ~$Zeitreihen_WKA_2025_2026.xlsx
data/raw/water_data/: Q_Almerswind-Grümpen_1D.csv  Q_Almerswind-Itz_1D.csv  Q_Arenshausen_15min.csv  Q_Arenshausen_1D.csv  Q_Artern_1D.csv  Q_Bernterode_1D.csv  Q_Blankenstein-Rosenthal_1D.csv  Q_Breitungen_1D.csv  Q_Döhlau_1D.csv  Q_Ebenhards_(ZP)_1D.csv  Q_Eischleben_1D.csv  Q_Eisenach-Nessemühle_15min.csv  Q_Eisenach-Nessemühle_1D.csv  Q_Eisenach-Petersberg_15min.csv  Q_Eisenach-Petersberg_1D.csv  Q_Eisenhammer_(AP)_1D.csv  Q_Eisfeld-Bahnbrücke_1D.csv  Q_Ellingshausen_1D.csv  Q_Ellrich_1D.csv  Q_Erfurt_2_(alt)_1D.csv  Q_Frankenroda_1D.csv  (+61 more)
notebooks/: 01_eda_power.ipynb  02_eda_features.ipynb  data.ipynb  preprocessing.ipynb  processing.ipynb  ts_analysis.ipynb  weather_data.ipynb
src/: App.tsx  __init__.py  index.css
src/components/: ConfidencePanel.tsx  ForecastChart.tsx  MetricCards.tsx  PlantsList.tsx  StatsBar.tsx  TopBar.tsx  WeatherPanel.tsx
src/dashboard/: dashboard.py  serve.py  upstream_unterpreilipp_final.parquet
src/data/: dataAdapter.ts  explore_api.py  fetch_data.py  mockForecast.ts  preprocess.py  preprocessing.py
src/lib/: format.ts
src/model/: train.py
src/types/: forecast.ts
