# metadata
# ========
[project]
name = "watts_up"
version = "0.0.1"

# requirements
# ============
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "matplotlib",
    "dotenv",
    "scikit-learn",
    "joblib",
    "streamlit",
    "plotly"
]

# build system
# ============
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"watts_up" = "src"}

[tools.setuptools.packages.find]
where = "src"
